// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Details component tests should match snapshot with empty data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--background-primaryBG"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
      data-testid="page-header"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-semi-bold"
          >
            common.purpose.service
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--color StyledProps--color-grey800"
          >
            k8s-service
          </p>
        </div>
      </div>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-left-medium Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-secondary"
        data-testid="closeButton"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-cross StyledProps--main"
          icon="cross"
        >
          <svg
            data-icon="cross"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              cross
            </desc>
            <path
              d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody"
      data-name="page-body"
      data-testid="page-body"
    >
      <div
        class="Layout--horizontal StyledProps--main tabsContainerMain StyledProps--flex StyledProps--flex-justifyContent-space-between"
      >
        <div
          class="bp3-tabs Tabs--main Tabs--horizontal"
        >
          <div
            class="bp3-tab-list"
            role="tablist"
          >
            <div
              class="bp3-tab-indicator-wrapper"
              style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
            >
              <div
                class="bp3-tab-indicator"
              />
            </div>
            <div
              aria-controls="bp3-tab-panel_serviceDetailsTab_overview"
              aria-disabled="false"
              aria-expanded="true"
              aria-selected="true"
              class="bp3-tab"
              data-tab-id="overview"
              id="bp3-tab-title_serviceDetailsTab_overview"
              role="tab"
              tabindex="0"
            >
              overview
            </div>
          </div>
          <div
            aria-hidden="false"
            aria-labelledby="bp3-tab-title_serviceDetailsTab_overview"
            class="bp3-tab-panel"
            id="bp3-tab-panel_serviceDetailsTab_overview"
            role="tabpanel"
          >
            <div
              class="StyledProps--font StyledProps--main overviewContainer"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-start"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Service Details component tests should match snapshot with mock data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--background-primaryBG"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
      data-testid="page-header"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-semi-bold"
          >
            common.purpose.service
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--color StyledProps--color-grey800"
          >
            k8s-service
          </p>
        </div>
      </div>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-left-medium Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-secondary"
        data-testid="closeButton"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-cross StyledProps--main"
          icon="cross"
        >
          <svg
            data-icon="cross"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              cross
            </desc>
            <path
              d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody"
      data-name="page-body"
      data-testid="page-body"
    >
      <div
        class="Layout--horizontal StyledProps--main tabsContainerMain StyledProps--flex StyledProps--flex-justifyContent-space-between"
      >
        <div
          class="bp3-tabs Tabs--main Tabs--horizontal"
        >
          <div
            class="bp3-tab-list"
            role="tablist"
          >
            <div
              class="bp3-tab-indicator-wrapper"
              style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
            >
              <div
                class="bp3-tab-indicator"
              />
            </div>
            <div
              aria-controls="bp3-tab-panel_serviceDetailsTab_overview"
              aria-disabled="false"
              aria-expanded="true"
              aria-selected="true"
              class="bp3-tab"
              data-tab-id="overview"
              id="bp3-tab-title_serviceDetailsTab_overview"
              role="tab"
              tabindex="0"
            >
              overview
            </div>
          </div>
          <div
            aria-hidden="false"
            aria-labelledby="bp3-tab-title_serviceDetailsTab_overview"
            class="bp3-tab-panel"
            id="bp3-tab-panel_serviceDetailsTab_overview"
            role="tabpanel"
          >
            <div
              class="StyledProps--font StyledProps--main overviewContainer"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-start"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 48%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-h5 StyledProps--font-weight-semi-bold"
                  >
                    common.serviceDetails
                  </p>
                  <div
                    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main serviceDetails StyledProps--background-white"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        common.namespace
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                        style="display: flex; align-items: center;"
                      >
                        <span
                          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                          data-icon="kubernetes-harness"
                        >
                          <svg
                            fill="currentcolor"
                            height="16"
                            viewBox="0 0 62 62"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M32.625 31.163a.861.861 0 00-.547.073.894.894 0 00-.433 1.158l-.006.009 2.047 4.946a10.45 10.45 0 004.224-5.306l-5.275-.892-.01.012zm-8.208.7a.892.892 0 00-1.032-.679l-.01-.01-5.229.887a10.489 10.489 0 004.21 5.269l2.027-4.898-.016-.019a.883.883 0 00.05-.55zm4.38 1.921a.893.893 0 00-1.574.002h-.005l-2.571 4.65a10.47 10.47 0 005.717.294c.351-.08.695-.176 1.03-.288l-2.578-4.658h-.02zm8.141-10.802l-3.957 3.541.002.011a.895.895 0 00.35 1.536l.006.02 5.125 1.477a10.63 10.63 0 00-1.526-6.585zm-7.351.396a.895.895 0 001.42.682l.015.007 4.33-3.07a10.526 10.526 0 00-6.07-2.926l.3 5.306.005.001zm-4.585.702a.893.893 0 001.417-.685l.022-.01.301-5.315c-.363.044-.724.106-1.08.187a10.434 10.434 0 00-5.026 2.738l4.357 3.09.009-.005zm-2.323 4.015a.892.892 0 00.35-1.535l.005-.021-3.979-3.559a10.431 10.431 0 00-1.48 6.604l5.1-1.471.004-.018zm3.864 1.564l1.468.705 1.463-.704.363-1.58-1.012-1.266h-1.63l-1.016 1.264.364 1.58z"
                              fill="#326CE5"
                            />
                            <path
                              d="M52.273 32.77l-4.182-18.166a3.265 3.265 0 00-1.75-2.178L29.41 4.343a3.262 3.262 0 00-2.81 0L9.677 12.43a3.264 3.264 0 00-1.751 2.178L3.749 32.774a3.183 3.183 0 000 1.394 3.242 3.242 0 00.623 1.323l11.716 14.566c.051.063.107.12.163.18a3.22 3.22 0 001.544.914c.268.074.545.112.823.114h.183l18.605-.005a3.113 3.113 0 00.816-.11c.112-.03.223-.065.331-.106.085-.033.17-.065.251-.104a3.34 3.34 0 001.132-.885l.357-.444 11.355-14.125a3.27 3.27 0 00.626-1.322 3.18 3.18 0 00-.001-1.394zm-17.56 7.065c.048.14.105.277.17.41a.795.795 0 00-.079.597 9.41 9.41 0 00.898 1.608c.197.259.378.528.544.808.04.075.094.192.132.273a1.017 1.017 0 11-1.831.865c-.039-.079-.093-.184-.125-.26a8.451 8.451 0 01-.295-.928 9.437 9.437 0 00-.695-1.704.8.8 0 00-.517-.313c-.032-.056-.152-.276-.217-.39a13.111 13.111 0 01-9.35-.024l-.229.415a.824.824 0 00-.436.213 7.09 7.09 0 00-.785 1.82 8.405 8.405 0 01-.292.929c-.032.074-.087.178-.125.257l-.002.005a1.018 1.018 0 11-1.829-.868c.038-.08.09-.197.13-.273.165-.28.346-.55.543-.81.357-.519.664-1.07.917-1.648a1.005 1.005 0 00-.09-.573l.184-.442a13.184 13.184 0 01-5.843-7.294l-.441.075a1.123 1.123 0 00-.583-.205 9.494 9.494 0 00-1.766.52c-.296.133-.6.249-.909.348-.073.02-.179.04-.262.058l-.02.007a.164.164 0 01-.015.002 1.018 1.018 0 11-.45-1.975l.015-.003.009-.003c.084-.02.193-.048.27-.063a8.78 8.78 0 01.972-.078 9.453 9.453 0 001.816-.298c.176-.112.325-.262.436-.44l.424-.123a13.11 13.11 0 012.067-9.14l-.324-.29a1.125 1.125 0 00-.204-.584 9.446 9.446 0 00-1.507-1.058 8.47 8.47 0 01-.84-.492c-.061-.045-.143-.114-.21-.169l-.015-.01a1.074 1.074 0 01-.249-1.494.976.976 0 01.807-.357c.258.011.506.104.707.266.069.054.163.127.224.18.236.222.459.459.667.707.415.455.872.869 1.366 1.235a.8.8 0 00.602.058c.12.088.243.175.366.26a13.032 13.032 0 016.62-3.782 13.32 13.32 0 011.831-.282l.024-.428c.157-.14.271-.322.329-.524a9.473 9.473 0 00-.113-1.838 8.526 8.526 0 01-.138-.963c-.003-.074.001-.176.002-.26l-.002-.028a1.019 1.019 0 112.026-.001c0 .089.005.206.002.288a8.407 8.407 0 01-.139.963 9.487 9.487 0 00-.114 1.838c.04.206.158.387.33.507.004.073.016.317.025.452a13.277 13.277 0 018.41 4.063l.385-.275c.207.035.42.012.615-.067a9.47 9.47 0 001.366-1.236c.209-.248.432-.485.669-.708.062-.053.156-.125.224-.179a1.02 1.02 0 111.263 1.584c-.068.055-.158.132-.223.18-.271.18-.553.344-.842.491a9.485 9.485 0 00-1.507 1.059.801.801 0 00-.19.574l-.36.322a13.164 13.164 0 012.11 9.118l.41.12c.102.183.253.335.437.438a9.48 9.48 0 001.817.3c.325.007.649.033.97.077.086.016.21.05.296.07a1.016 1.016 0 11-.45 1.974l-.015-.002-.02-.007c-.084-.018-.189-.037-.262-.056a8.61 8.61 0 01-.909-.35 9.476 9.476 0 00-1.767-.52.801.801 0 00-.567.21 15.192 15.192 0 00-.433-.076 13.184 13.184 0 01-5.84 7.347z"
                              fill="#326CE5"
                            />
                            <path
                              d="M54.483 33.24L49.92 13.422a3.56 3.56 0 00-1.91-2.377L29.54 2.228a3.559 3.559 0 00-3.066 0L8.01 11.05a3.563 3.563 0 00-1.911 2.376l-4.555 19.82a3.52 3.52 0 00.68 2.964l12.782 15.892a3.595 3.595 0 002.76 1.318l20.498-.005a3.597 3.597 0 002.76-1.316L53.8 36.205a3.534 3.534 0 00.683-2.964zm-2.208.928c-.03.14-.07.279-.12.414a3.164 3.164 0 01-.506.909L40.295 49.615l-.357.445a3.36 3.36 0 01-1.132.885 3.207 3.207 0 01-.25.103 3.324 3.324 0 01-1.148.218l-18.606.004h-.182a3.342 3.342 0 01-1.749-.516 3.226 3.226 0 01-.618-.512c-.056-.06-.112-.117-.163-.18L4.374 35.496a3.145 3.145 0 01-.624-1.323 3.196 3.196 0 01.001-1.395l4.176-18.166a3.265 3.265 0 011.75-2.177l16.926-8.086a3.262 3.262 0 012.81 0l16.929 8.082a3.265 3.265 0 011.75 2.178l4.183 18.166a3.19 3.19 0 010 1.394z"
                              fill="#fff"
                            />
                            <path
                              d="M44.976 31.318c-.086-.02-.21-.054-.294-.07a8.556 8.556 0 00-.972-.078 9.475 9.475 0 01-1.817-.298 1.14 1.14 0 01-.437-.44l-.409-.119a13.164 13.164 0 00-2.11-9.118c.105-.095.303-.27.359-.322a.801.801 0 01.19-.574 9.48 9.48 0 011.507-1.058c.29-.148.57-.312.842-.492.065-.048.154-.125.223-.18a1.018 1.018 0 10-1.262-1.584c-.07.055-.163.126-.225.18a8.61 8.61 0 00-.67.707c-.413.456-.87.87-1.365 1.236-.195.08-.408.103-.615.067l-.385.275a13.277 13.277 0 00-8.41-4.063c-.01-.135-.02-.379-.024-.452a.803.803 0 01-.33-.507 9.485 9.485 0 01.114-1.838c.065-.318.11-.64.138-.963.003-.081-.002-.2-.002-.288a1.017 1.017 0 00-1.98-.42c-.045.136-.06.28-.046.42l.002.03c0 .083-.005.185-.002.258.028.324.074.646.138.964.098.608.135 1.223.113 1.838a1.105 1.105 0 01-.329.524l-.024.428a13.17 13.17 0 00-1.831.282 13.033 13.033 0 00-6.62 3.782 17.31 17.31 0 01-.366-.26.8.8 0 01-.602-.058 9.45 9.45 0 01-1.365-1.235 8.447 8.447 0 00-.667-.708c-.062-.053-.156-.125-.225-.18a1.207 1.207 0 00-.706-.266.975.975 0 00-.808.357 1.074 1.074 0 00.25 1.494l.015.011c.066.054.148.124.21.169.27.18.55.344.84.491.535.303 1.04.658 1.506 1.06.121.171.192.374.204.584l.324.29a13.11 13.11 0 00-2.067 9.14l-.424.123a1.4 1.4 0 01-.436.438 9.457 9.457 0 01-1.816.3c-.325.007-.65.033-.972.078a4.288 4.288 0 00-.27.063l-.01.002-.014.004a1.016 1.016 0 10.45 1.974l.016-.002c.006-.002.012-.005.019-.006.084-.02.189-.04.262-.06.31-.098.613-.214.909-.348a9.49 9.49 0 011.766-.52c.21.013.412.085.583.206l.441-.075a13.184 13.184 0 005.843 7.294l-.184.442c.085.178.117.377.09.573a9.902 9.902 0 01-.917 1.648c-.196.259-.378.53-.543.81-.04.075-.092.192-.13.272a1.019 1.019 0 001.26 1.465 1.016 1.016 0 00.57-.597v-.004c.04-.08.094-.183.126-.257a8.41 8.41 0 00.293-.929 7.09 7.09 0 01.784-1.82.823.823 0 01.437-.213l.23-.415a13.111 13.111 0 009.348.023c.065.115.185.335.217.39a.8.8 0 01.517.314 9.44 9.44 0 01.696 1.704c.08.315.178.625.294.928.032.075.086.18.125.26a1.018 1.018 0 101.832-.866c-.04-.08-.092-.197-.133-.273a8.414 8.414 0 00-.543-.807 9.448 9.448 0 01-.898-1.608.796.796 0 01.078-.598 3.483 3.483 0 01-.169-.409 13.183 13.183 0 005.84-7.347c.131.021.36.061.434.076a.801.801 0 01.566-.21 9.48 9.48 0 011.767.52c.296.134.6.25.91.35.072.02.177.038.26.056l.02.007.015.002a1.016 1.016 0 10.451-1.974zm-9.626-10.32l-4.33 3.07-.015-.007a.894.894 0 01-1.42-.681l-.004-.003-.301-5.305a10.527 10.527 0 016.07 2.927zm-8.157 5.817h1.63l1.013 1.266-.363 1.58-1.464.704-1.467-.706-.364-1.58 1.015-1.264zm-1.533-8.558c.357-.08.718-.142 1.081-.186l-.3 5.315-.023.01a.893.893 0 01-1.417.685l-.009.005-4.358-3.09a10.434 10.434 0 015.026-2.739zm-6.606 4.725l3.979 3.558-.005.022a.893.893 0 01-.35 1.535l-.005.017-5.1 1.472a10.431 10.431 0 011.481-6.604zm5.327 9.453l-2.026 4.896a10.49 10.49 0 01-4.21-5.269l5.23-.888.008.012a.874.874 0 01.594.096.893.893 0 01.389 1.133l.015.02zm5.981 6.296a10.476 10.476 0 01-5.717-.293l2.572-4.65h.004a.894.894 0 011.575-.002h.019l2.578 4.658c-.335.112-.678.207-1.03.287zm3.323-1.38l-2.047-4.946.006-.01a.895.895 0 01.98-1.23l.009-.012 5.276.892a10.45 10.45 0 01-4.224 5.306zm4.778-7.783l-5.126-1.476-.005-.022a.894.894 0 01-.35-1.535l-.002-.01 3.956-3.541a10.629 10.629 0 011.527 6.584z"
                              fill="#fff"
                            />
                            <circle
                              cx="47.472"
                              cy="47.964"
                              fill="#fff"
                              r="13.603"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M54.263 48.493c-.186.498-.498.934-.56.934l-1.37 1.369-2.74-2.676 2.678-2.677 1.37 1.37c.436.373.81.871.622 1.68zm-6.908 6.16c-.499-.186-.934-.497-.934-.56l-1.37-1.37 2.677-2.675 2.678 2.676-1.37 1.37c-.374.373-.934.746-1.681.56zm-6.165-6.907c.187-.498.498-.933.56-.933l1.37-1.37 2.678 2.677-2.678 2.676-1.432-1.37c-.374-.373-.747-.933-.498-1.68zm6.912-6.163c.498.186.934.498.934.56l1.37 1.37-2.678 2.675-2.677-2.676 1.37-1.37c.373-.373.871-.808 1.68-.56zm7.533 3.3l-4.67-4.668a5.263 5.263 0 00-1.93-1.183c-1.62-.56-3.176-.124-4.484 1.183l-4.732 4.668c-.062.062-.81.809-1.183 1.93-.56 1.617-.125 3.173 1.183 4.48l4.67 4.668c.062.063.81.81 1.93 1.183.436.125.934.249 1.37.249 1.121 0 2.18-.498 3.114-1.37l4.67-4.667c.062-.063.81-.81 1.183-1.93.56-1.618.124-3.236-1.121-4.543z"
                              fill="#25A6F7"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        chaos-1000
                      </p>
                    </div>
                    <div
                      class="bp3-divider"
                    />
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        discovery.serviceDrawer.ipFamily
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                      >
                        IPv4
                      </p>
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        IP Address
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-variation-body2"
                      >
                        10.104.11.160
                      </p>
                    </div>
                    <div
                      class="bp3-divider"
                    />
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        common.smtp.port
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-variation-body2"
                      >
                        9006
                      </p>
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        Target Port
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-variation-body2"
                      >
                        9006
                      </p>
                    </div>
                    <div
                      class="bp3-divider"
                    />
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        discovery.serviceDrawer.selector
                      </p>
                      <div
                        class="Layout--vertical StyledProps--main"
                        style="width: 60%;"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                          style="--text-line-clamp: 1;"
                        >
                          app.kubernetes.io/instance
                          :
                          smp-chaos
                        </p>
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                          style="--text-line-clamp: 1;"
                        >
                          app.kubernetes.io/name
                          :
                          access-control
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 48%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-h5 StyledProps--font-weight-semi-bold"
                  >
                    discovery.serviceDrawer.workloads
                  </p>
                  <div
                    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--background-white"
                    style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.04), 0px 2px 4px rgba(96, 97, 112, 0.16); padding: 36px; border-radius: 4px;"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        name
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                      >
                        access-control
                      </p>
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        common.namespace
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                      >
                        chaos-1000
                      </p>
                    </div>
                    <div
                      class="bp3-divider"
                    />
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        kind
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                      >
                        Deployment
                      </p>
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        platform.delegates.commandLineCreation.replicas
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                      >
                        1
                      </p>
                    </div>
                    <div
                      class="bp3-divider"
                    />
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        pipelineSteps.labelsLabel
                      </p>
                      <div
                        class="Layout--vertical StyledProps--main"
                        style="width: 60%;"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                          style="--text-line-clamp: 1;"
                        >
                          app
                          :
                          access-control
                        </p>
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                          style="--text-line-clamp: 1;"
                        >
                          app.kubernetes.io/instance
                          :
                          smp-chaos
                        </p>
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                          style="--text-line-clamp: 1;"
                        >
                          app.kubernetes.io/name
                          :
                          access-control
                        </p>
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                          style="--text-line-clamp: 1;"
                        >
                          pod-template-hash
                          :
                          8546c78fd7
                        </p>
                      </div>
                    </div>
                    <div
                      class="bp3-divider"
                    />
                    <div
                      class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body"
                        style="width: 40%;"
                      >
                        common.annotations
                      </p>
                      <div
                        class="Layout--vertical StyledProps--main"
                        style="width: 60%;"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-variation-body2"
                          style="--text-line-clamp: 1;"
                        >
                          cni.projectcalico.org/podIPs
                          :
                          10.100.2.2/32
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
